--- a/src/main/resources/templates/members/register.html
+++ b/src/main/resources/templates/members/register.html
@@ -24,13 +24,13 @@
   <form id="registerForm" action="/register-process" method="post">
     <div class="form-group">
       <label for="loginId">아이디</label>
-      <input type="text" id="loginId" name="loginId" placeholder="사용할 아이디를 입력하세요" required>
+      <input type="text" id="loginId" name="userid" placeholder="사용할 아이디를 입력하세요" required>
       <div id="idCheckMessage" class="message"></div>
     </div>
 
     <div class="form-group">
       <label for="password">비밀번호</label>
-      <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요" required>
+      <input type="password" id="password" name="pw" placeholder="비밀번호를 입력하세요" required>
     </div>
 
     <div class="form-group">
@@ -51,7 +51,7 @@
 
     <div class="form-group">
       <label for="phoneNumber">전화번호</label>
-      <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="전화번호를 입력하세요 ('-' 제외)" required>
+      <input type="tel" id="phoneNumber" name="phone" placeholder="전화번호를 입력하세요 ('-' 제외)" required>
     </div>
     <button type="submit" class="btn-signup">가입하기</button>
   </form>
